--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-26 18:47+0200\n"
+"POT-Creation-Date: 2018-11-26 19:13+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -164,6 +164,10 @@ msgstr "alkaa"
 #: indicators/models.py:70
 msgid "ends at"
 msgstr "päättyy"
+
+#: indicators/models.py:75
+msgid "rationale"
+msgstr "perustelut"
 
 #: indicators/models.py:84
 msgid "indicator estimate"
