--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -516,7 +516,7 @@ msgstr "omistaja"
 
 #: indicators/models.py
 msgid "owner name"
-msgstr "lyhenne"
+msgstr "omistajan nimi"
 
 #: indicators/models.py
 msgid "Set if owner organization is not available"
