Add contact_for_actions column to Person admin list view

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -726,6 +726,10 @@ msgstr "mittarin yhteyshenkilö"
 msgid "indicator contact persons"
 msgstr "mittarin yhteyshenkilöt"
 
+#: people/admin.py
+msgid "contact for actions"
+msgstr "yhteyshenkilönä toimenpiteille"
+
 #: people/apps.py
 msgid "People"
 msgstr "Henkilöt"
