--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-29 15:14+0200\n"
+"POT-Creation-Date: 2019-12-10 19:16+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -403,6 +403,14 @@ msgstr "yläsivu"
 #: content/models.py
 msgid "slug"
 msgstr "slugi"
+
+#: content/models.py
+msgid "visible in top menu"
+msgstr "näkyy ylävalikossa"
+
+#: content/models.py
+msgid "visible in page footer"
+msgstr "näkyy sivun footerissa"
 
 #: content/models.py
 msgid "is published"
@@ -818,6 +826,10 @@ msgstr "sähköpostiosoite"
 msgctxt "person's role"
 msgid "title"
 msgstr "titteli"
+
+#: people/models.py
+msgid "postal address"
+msgstr "postiosoite"
 
 #: people/models.py
 msgid "Set if this person is part of an organization"
