--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-10 19:16+0200\n"
+"POT-Creation-Date: 2019-12-19 06:25+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -59,6 +59,7 @@ msgid "Actions"
 msgstr "Toimenpiteet"
 
 #: actions/models.py content/models.py indicators/models.py
+#: notifications/models.py
 msgid "name"
 msgstr "nimi"
 
@@ -91,6 +92,7 @@ msgid "Users that can modify everything related to the action plan"
 msgstr "Käyttäjät, jotka voivat muokata kaikkea toimenpideohjelmaan liittyvää"
 
 #: actions/models.py content/models.py indicators/models.py
+#: notifications/models.py
 msgid "plan"
 msgstr "toimenpideohjelma"
 
@@ -314,7 +316,7 @@ msgstr "luokan tyyppi"
 msgid "category types"
 msgstr "luokan tyypit"
 
-#: actions/models.py
+#: actions/models.py notifications/models.py
 msgid "type"
 msgstr "tyyppi"
 
@@ -346,7 +348,7 @@ msgstr "päivämäärä"
 msgid "author"
 msgstr "tekijä"
 
-#: actions/models.py content/models.py
+#: actions/models.py content/models.py notifications/models.py
 msgid "content"
 msgstr "sisältö"
 
@@ -384,7 +386,7 @@ msgstr "kuva"
 msgid "image cropping"
 msgstr "kuvan rajaus"
 
-#: aplans/utils.py
+#: aplans/utils.py notifications/models.py
 msgid "identifier"
 msgstr "tunniste"
 
@@ -790,46 +792,77 @@ msgstr "mittarin yhteyshenkilö"
 msgid "indicator contact persons"
 msgstr "mittarin yhteyshenkilöt"
 
-#: notifications/management/commands/send_notifications.py
-#, fuzzy, python-format
-#| msgid "Task is %(days)d day late (due adue att %(date)s)"
-#| msgid_plural "Task is %(days)d days late (due at %(date)s)"
-msgid "Task is %(days)d day late (due at %(date)s)"
-msgid_plural "Task is %(days)d days late (due at %(date)s)"
-msgstr[0] "Tehtävä on %(days)d päivän myöhässä (tavoitepäivämäärä %(date)s)"
-msgstr[1] "Tehtävä on %(days)d päivää myöhässä (tavoitepäivämäärä %(date)s)"
+#: notifications/apps.py
+msgid "Notifications"
+msgstr "Herätteet"
 
-#: notifications/management/commands/send_notifications.py
-msgid "Task is due tomorrow"
-msgstr ""
+#: notifications/models.py
+msgid "Task is late"
+msgstr "Tehtävä on myöhässä"
 
-#: notifications/management/commands/send_notifications.py
-#, fuzzy, python-format
-#| msgid "Task is %(days)d day late (due adue att %(date)s)"
-#| msgid_plural "Task is %(days)d days late (due at %(date)s)"
-msgid "Task is due in a week (due at %(date)s)"
-msgstr "Tehtävä on %(days)d päivän myöhässä (tavoitepäivämäärä %(date)s)"
+#: notifications/models.py
+msgid "Task is due soon"
+msgstr "Tehtävän tavoitepäivämäärä lähestyy"
 
-#: notifications/management/commands/send_notifications.py
-#, python-format
-msgid "Task deadline is %(days)d day away (due at %(date)s)"
-msgid_plural "Task deadline is %(days)d days away (due at %(date)s)"
-msgstr[0] "Tehtävän tavoitepäivämäärä on huomenna (%(date)s)"
-msgstr[1] "Tehtävän tavoitepäivämäärä on %(days)d päivän päässä (%(date)s)"
+#: notifications/models.py
+msgid "Action metadata has not been updated recently"
+msgstr "Toimenpiteen tietoja ei ole päivitetty viime aikoina"
 
-#: notifications/management/commands/send_notifications.py
-#, python-format
-msgid "Action doesn't have at least %(count)d in-progress task with due dates within one year"
-msgid_plural "Action doesn't have at least %(count)d in-progress tasks with due dates within one year"
-msgstr[0] ""
-msgstr[1] ""
+#: notifications/models.py
+msgid "Action doesn't have enough in-progress tasks"
+msgstr "Toimenpiteellä ei ole tarpeeksi käynnissä olevia tehtäviä"
 
-#: notifications/management/commands/send_notifications.py
-#, python-format
-msgid "Action doesn't have at least %(count)d in-progress task with due dates within %(days)d days"
-msgid_plural "Action doesn't have at least %(count)d in-progress tasks with due dates within %(days)d days"
-msgstr[0] ""
-msgstr[1] ""
+#: notifications/models.py
+msgid "HTML body"
+msgstr "HTML-sisältö"
+
+#: notifications/models.py
+msgid "base template"
+msgstr "pohjamallinne"
+
+#: notifications/models.py
+msgid "base templates"
+msgstr "pohjamallinteet"
+
+#: notifications/models.py
+msgid "subject"
+msgstr "otsikko"
+
+#: notifications/models.py
+msgid "Subject for email notifications"
+msgstr "Sähköpostiherätteen otsikko"
+
+#: notifications/models.py
+msgid "HTML body for email notifications"
+msgstr "Sähköpostiherätteen HTML-sisältö"
+
+#: notifications/models.py
+msgid "notification template"
+msgstr "herätteen mallinne"
+
+#: notifications/models.py
+msgid "notification templates"
+msgstr "herätteiden mallinteet"
+
+#: notifications/models.py
+msgid "template"
+msgstr "mallinne"
+
+#: notifications/models.py
+msgid "Do not set if content block is used in multiple templates"
+msgstr "Älä aseta jos sisältölohko on käytössä useammassa mallinteessa"
+
+#: notifications/models.py
+msgid "HTML content for the block"
+msgstr "Lohkon HTML-sisältö"
+
+#: notifications/models.py
+msgid "content block"
+msgstr "sisältölohko"
+
+#: notifications/models.py
+msgid "content blocks"
+msgstr "sisältölohkot"
 
 #: people/admin.py
 msgid "Is contact person"
