--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-14 17:42+0200\n"
+"POT-Creation-Date: 2020-01-15 14:20+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -533,6 +533,10 @@ msgstr "toimenpidelistan ingressi"
 #: content/models.py
 msgid "indicator list lead content"
 msgstr "mittarilistan ingressi"
+
+#: content/models.py
+msgid "dashboard lead content"
+msgstr "tilannekuvasivun ingressi"
 
 #: content/models.py
 msgid "official name description"
