--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-15 14:20+0200\n"
+"POT-Creation-Date: 2020-01-16 16:30+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -389,6 +389,11 @@ msgid "action status updates"
 msgstr "toimenpiteiden tilannepäivitykset"
 
 #: actions/models.py
+#, python-format
+msgid "%(color)s is not a hex color (#112233)"
+msgstr ""
+
+#: actions/models.py
 msgid "parent"
 msgstr "yläluokka"
 
@@ -397,12 +402,32 @@ msgid "weight"
 msgstr "paino"
 
 #: actions/models.py
+msgid "color"
+msgstr "väri"
+
+#: actions/models.py
 msgid "impact group action"
 msgstr "toimenpiteen vaikuttavuusryhmä"
 
 #: actions/models.py
 msgid "impact group actions"
 msgstr "toimenpiteen vaikuttavuusryhmät"
+
+#: actions/models.py
+msgid "description when action fulfills criteria"
+msgstr "kuvaus kun toimenpide täyttää ehdon"
+
+#: actions/models.py
+msgid "description when action doesn't fulfill criteria"
+msgstr "kuvaus kun toimenpide ei täytä ehtoa"
+
+#: actions/models.py
+msgid "monitoring quality point"
+msgstr "seurannan laatupiste"
+
+#: actions/models.py
+msgid "monitoring quality points"
+msgstr "seurannan laatupisteet"
 
 #: admin_site/admin.py
 #, python-format
